correct file name

--- a/modified_IPCC_AR6_regions.ipynb
+++ b/modified_IPCC_AR6_regions.ipynb
@@ -279,7 +279,7 @@
     "import geopandas as gp\n",
     "\n",
     "# Read the shape file\n",
-    "regions_gp = gp.read_file(\"modified_ar6_regions.shp\")\n",
+    "regions_gp = gp.read_file(\"modified_ar6_regions_Ahn.et.al.2023.shp\")\n",
     "print(regions_gp)\n",
     "regions_gp\n",
     "\n",
