--- a/modified_IPCC_AR6_regions.ipynb
+++ b/modified_IPCC_AR6_regions.ipynb
@@ -436,9 +436,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pmp_v20231116] *",
+   "display_name": "Python [conda env:.conda-v20240503]",
    "language": "python",
-   "name": "conda-env-pmp_v20231116-py"
+   "name": "conda-env-.conda-v20240503-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -450,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
